[package]
name = "geyser_test"
version = "0.1.0"
edition = "2021"

[dependencies]
yellowstone-grpc-proto = { version = "6.0.0"}
dotenv = "0.15"

tonic = { version = "0.12.3"  , features = ["tls", "tls-native-roots"] }
solana-sdk = "2.2.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
